# syncova-auth

./: pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/controller/: auth.py
app/integrations/: redis.py
app/middleware/: authentication.py
app/migrations/: env.py
app/migrations/versions/: 656e0496c9fe_create_table_user.py
app/models/: __init__.py  users.py
app/routes/: auth.py
app/schemas/: __init__.py  auth.py
app/utils/: exceptions.py  password.py  settings.py
