[project]
name = "syncova-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.138.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-jose>=3.5.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
]
